Wed Nov 14 21:48:09 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/ConfigTransports/run_test.pl:

          Use strict Perl for easier maintenance.

Wed Nov 14 21:07:27 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/Deadline/publisher.cpp:
        * tests/DCPS/Deadline/subscriber.cpp:

          Static initialization can't depend on functions that use
          statics from other compilation units.

        * tests/DCPS/DpShutdown/DpShutdown.mpc:
        * tests/DCPS/DpShutdown/dpshutdown.cpp:
        * tests/DCPS/ReaderDataLifecycle/ReaderDataLifecycle.mpc:
        * tests/DCPS/ReaderDataLifecycle/main.cpp:

          Enabled testing with RTPS on static builds.

Mon Nov 12 19:13:39 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:

          When a matched writer is deleted normally, update each instance's
          state accordingly.  The unregister/dispose message may not be
          receieved.

        * dds/DCPS/transport/framework/TransportCustomizedElement.cpp:

          Need to account for multiple levels of customization in order
          to get back to the original send element.

        * tests/DCPS/FooTest5/publisher.cpp:

          Avoid spinning in the main thread without yielding CPU.

        * bin/dcps_tests.lst:
        * tests/DCPS/ReaderDataLifecycle/main.cpp:
        * tests/DCPS/ReaderDataLifecycle/rtps.ini:
        * tests/DCPS/ReaderDataLifecycle/run_test.pl:

          Optionally run this test with the rtps_udp transport.

Thu Nov  8 22:16:22 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/InfoRepo/DCPSInfo_i.cpp:

          Fixed a compiler warning.

        * tests/DCPS/ReaderDataLifecycle/main.cpp:

          Test the two RDL QoS settings in isolation: during the no-writers
          purging test, the instance should not also be disposed.

Wed Nov  7 23:36:58 UTC 2012  Trevor Fields  <fields_t@ociweb.com>
